--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li><a href="#">product</a></li>
                 <li><a href="#">services</a></li>
                 <li><a href="#">contact</a></li>
+                <li><a href="#">Cast</a></li>
             </ul>
         </div>
 
